dev/argo-rollout.yaml
# argo-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: sampleapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sampleapp
  strategy:
    blueGreen:
      activeService: sampleapp-active
      previewService: sampleapp-preview
  template:
    metadata:
      labels:
        app: sampleapp
    spec:
      containers:
      - name: sampleapp
        image: meghakadur/argocd:1.0.RELEASE-93
        ports:
        - containerPort: 80
