dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sampleapp
  name: sampleapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sampleapp
  strategy: {}
  template:
    metadata:
      labels:
        app: sampleapp
    spec:
      containers:
      - image: meghakadur/argocd:1.0.RELEASE-81
        name: sampleapp
        ports: 
        - containerPort: 80
